--- a/account/templates/account/add.html
+++ b/account/templates/account/add.html
@@ -8,6 +8,7 @@
             <input class="form-control" type="file" name="files" multiple>
         </div>
         <button class="btn btn-primary" type="submit">Upload</button>
+        <p class="mt-3 text-danger">{{ error }}</p>
     </form>
        
 </div>
