--- a/account/templates/account/layout.html
+++ b/account/templates/account/layout.html
@@ -12,7 +12,7 @@
 
     <div class="row m-3">
         <div class="col">
-            Hello, {{ username }}
+            Hello, <span class="fw-bold">{{ username }}</span>
         </div>
         <div class="col text-center">
             <strong>
@@ -36,5 +36,6 @@
             {% block content %}
             {% endblock %}
         </div>
+    </div>
 </body>
 </html>
