--- a/auth_app/templates/auth_app/login.html
+++ b/auth_app/templates/auth_app/login.html
@@ -1,6 +1,8 @@
 {% extends 'auth_app/layout.html'%}
 
 {% block content %}
+<!--
+    
 <div class="row">
     <div class="col-3">
         <div class="container" >
@@ -14,5 +16,22 @@
             </form>
         </div>
     </div>
-</div>
+</div> 
+
+-->
+
+<div class="d-flex flex-column align-items-center justify-content-center vh-100">
+    <h1>Login</h1>
+    <form class="border rounded p-4 m-4" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-primary" type="submit">
+                Login
+            </button>
+        </div>
+    </form>
+
+    <a href="{% url 'sing_up' %}">Don't have account?</a>
+  </div>
 {% endblock %}
