--- a/reader/templates/reader/reader.html
+++ b/reader/templates/reader/reader.html
@@ -1,45 +1,108 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <title>Reader</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SyncRead</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
+  <script src="{% static 'reader/node_modules/epubjs/dist/epub.js' %}"></script>
+
 </head>
 <body>
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
 
-
-    <div class="row">
-        <div class="col">
-            <button class="btn"><i class="bi bi bi-bookmark"></i></button>
-            <div class="d-flex flex-column align-items-end justify-content-center" style="height: 100vh;">
-                <button class="btn"><i class="bi bi bi-chevron-left"></i></button>
-            </div>
+  <div class="row fixed-top">
+    <div class="col">
+        <button class="btn"><i class="bi bi bi-bookmark"></i></button>
+        <div class="d-flex flex-column align-items-end justify-content-center" style="height: 100vh;">
+            <button id="prev" class="btn"><i class="bi bi bi-chevron-left"></i></button>
         </div>
-        <div class="col-10">
-            <div class="container bg-light rounded-3 mt-2">
-                <h3>1914 translation by H. Rackham</h3>
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-                <h3>Section 1.10.33 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</h3>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta cumque nihil impedit quo</p>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta cumque nihil impedit quo</p>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta cumque nihil impedit quo</p>
-
-            </div>
+    </div>
+    <div class="col-10">
+        <div class="container d-flex flex-column justify-content-center rounded-3 mt-2" style="height: 100vh;">
+            <div id="viewer"></div>
         </div>
-        <div class="col">
-            <div class="d-flex justify-content-end">
-                <a href="{% url 'books' %}" class="btn"><i class="bi bi-x-lg"></i></a>
-            </div>
-            <div class="d-flex flex-column align-items-start justify-content-center" style="height: 100vh;">
-                <div>
-                    <button class="btn"><i class="bi bi-chevron-right"></i></button>
-                </div>
+    </div>
+    <div class="col">
+        <div class="d-flex justify-content-end">
+            <a href="{% url 'books' %}" class="btn"><i class="bi bi-x-lg"></i></a>
+        </div>
+        <div class="d-flex flex-column align-items-start justify-content-center" style="height: 100vh;">
+            <div>
+                <button onclick="closePage()" id="next" class="btn"><i class="bi bi-chevron-right"></i></button>
             </div>
         </div>
     </div>
+  </div>
+  
+  <script>
+    var book = ePub("http://127.0.0.1:8000/{{path }}");
+    var rendition = book.renderTo("viewer", {
+      width: "100%",
+      height: 600
+    });
+
+    // Проверяем наличие сохраненной страницы
+    if (localStorage.getItem("savedLocation") !== null) {
+      var savedLocation = JSON.parse(localStorage.getItem("savedLocation"));
+      rendition.display(savedLocation).then(function() {
+        // -- do stuff after displaying saved page
+      });
+    } else {
+      var displayed = rendition.display();
+      displayed.then(function(renderer){
+        // -- do stuff
+      });
+    }
+
+    // Navigation loaded
+    book.loaded.navigation.then(function(toc){
+      // console.log(toc);
+    });
+
+    var next = document.getElementById("next");
+    next.addEventListener("click", function(){
+      rendition.next();
+      saveLocation();
+    }, false);
+
+    var prev = document.getElementById("prev");
+    prev.addEventListener("click", function(){
+      rendition.prev();
+      saveLocation();
+    }, false);
+
+    var keyListener = function(e){
+
+      // Left Key
+      if ((e.keyCode || e.which) == 37) {
+        rendition.prev();
+        saveLocation();
+      }
+
+      // Right Key
+      if ((e.keyCode || e.which) == 39) {
+        rendition.next();
+        saveLocation();
+      }
+
+    };
+
+    rendition.on("keyup", keyListener);
+    document.addEventListener("keyup", keyListener, false);
+
+    // Функция для сохранения текущей страницы
+    function saveLocation() {
+      var location = rendition.location.end.cfi;
+      localStorage.setItem("savedLocation", JSON.stringify(location));
+    }
+
+
+  </script>
+
 </body>
 </html>
